[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/WalkingEnemy.png" type="Texture" id=2]
[ext_resource path="res://src/Enemies/WalkingEnemy.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 6 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "move"
length = 0.8
loop = true
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 6.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 7, 5.5 )

[node name="WalkingEnemy" instance=ExtResource( 1 )]
collision_layer = 0
collision_mask = 2
script = ExtResource( 3 )

[node name="Sprite" parent="." index="0"]
position = Vector2( 0, -9 )
texture = ExtResource( 2 )
flip_h = true
hframes = 2

[node name="Collider" parent="." index="1"]
position = Vector2( 0, -6 )
shape = SubResource( 1 )

[node name="AnimationPlayer" parent="." index="2"]
autoplay = "move"
anims/RESET = SubResource( 2 )
anims/move = SubResource( 3 )

[node name="FloorLeft" type="RayCast2D" parent="." index="3"]
position = Vector2( -2, 0 )
enabled = true
cast_to = Vector2( 0, 6 )
collision_mask = 2

[node name="FloorRight" type="RayCast2D" parent="." index="4"]
position = Vector2( 2, 0 )
enabled = true
cast_to = Vector2( 0, 6 )
collision_mask = 2

[node name="WallRight" type="RayCast2D" parent="." index="5"]
position = Vector2( 0, -8 )
enabled = true
cast_to = Vector2( 6, 0 )
collision_mask = 2

[node name="WallLeft" type="RayCast2D" parent="." index="6"]
position = Vector2( 0, -8 )
enabled = true
cast_to = Vector2( -6, 0 )
collision_mask = 2

[node name="Collider" parent="Hurtbox" index="0"]
position = Vector2( 0, -7.5 )
shape = SubResource( 4 )

[node name="Collider" parent="Hitbox" index="0"]
position = Vector2( 0, -8.5 )
shape = SubResource( 5 )

[node name="EnemyStats" parent="." index="9"]
max_health = 3

[editable path="Hurtbox"]
[editable path="Hitbox"]
